<resources>
    <string name="app_name">MoSoF</string>
    <string name="input_plant_name">Tuliskan Nama Tanamanmu</string>
    <string name="let_s_plant">Let\'s Plant</string>
    <string name="plant_condition">Bahaya! Tanamanmu Kurang Air!</string>
    <string name="plant_name">TanamanKu</string>
    <string name="temperature">40C</string>
    <string name="humidtiy">35%</string>
    <string name="ph_icon">pH</string>
    <string name="pH">5.7</string>
    <string name="watering">Siram</string>
    <string name="fertilizing">Beri Pupuk</string>
    <string name="cd_plant">plant</string>
    <string name="apostrophe">\'\'</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_fertilizer">Tambah Pupuk</string>
    <string name="add_water">Tambah Air</string>
    <string name="exit_verif">Tekan Sekali Lagi untuk Keluar</string>
    <string name="done">Selesai</string>
</resources>