<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow">

    <TextView
        android:id="@+id/tv_plant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/plant_name"
        android:textColor="@color/green"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_apostrophe1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/apostrophe"
        android:textColor="@color/red"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_plant_name" />

    <TextView
        android:id="@+id/tv_plant_condition"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/plant_condition"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="31sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_apostrophe2"
        app:layout_constraintStart_toEndOf="@id/tv_apostrophe1"
        app:layout_constraintTop_toBottomOf="@id/tv_plant_name" />

    <TextView
        android:id="@+id/tv_apostrophe2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:text="@string/apostrophe"
        android:textColor="@color/red"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_plant_name" />

    <ImageView
        android:id="@+id/iv_temperature"
        android:layout_width="30dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/temperature"
        android:src="@drawable/temp_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_plant_condition" />

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/temperature"
        android:textColor="@color/green"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_temperature" />

    <ImageView
        android:id="@+id/iv_leaves1"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/cd_plant"
        android:src="@drawable/green_leaves"
        app:layout_constraintEnd_toStartOf="@+id/iv_temperature"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_plant_condition" />

    <ImageView
        android:id="@+id/iv_leaves2"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/cd_plant"
        android:src="@drawable/green_leaves_flip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toEndOf="@+id/iv_temperature"
        app:layout_constraintTop_toBottomOf="@id/tv_plant_condition" />

    <ImageView
        android:id="@+id/iv_humidity"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="72dp"
        android:contentDescription="@string/humidtiy"
        android:src="@drawable/humid_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_leaves1" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/humidtiy"
        android:textColor="@color/green"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_humidity" />

    <TextView
        android:id="@+id/tv_pH_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ph_icon"
        android:textColor="@color/dark_green"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_humidity"
        app:layout_constraintTop_toBottomOf="@+id/iv_leaves2" />

    <TextView
        android:id="@+id/tv_pH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pH"
        android:textColor="@color/green"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_humidity"
        app:layout_constraintTop_toBottomOf="@+id/tv_pH_icon" />

    <ImageView
        android:id="@+id/iv_soilDryness"
        android:layout_width="130dp"
        android:layout_height="90dp"
        android:contentDescription="@string/soiDryness"
        android:src="@drawable/clipart4691869"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_temperature"
        app:layout_constraintVertical_bias="0.63" />

    <TextView
        android:id="@+id/tv_soil_dryness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_40"
        android:textColor="@color/green"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_soilDryness" />
</androidx.constraintlayout.widget.ConstraintLayout>